--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,6 @@ import Layout from "@/layouts/Layout.astro";
 
 <Layout title="Welcome to Astro.">
 	<main class="min-h-screen p-4">
-		<h1>Gaterapia</h1>
+		<h1 class="font-['Caveat_Brush'] text-4xl text-white">Gaterapia</h1>
 	</main>
 </Layout>
