feat: 🔍️ add site title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Gaterapia">
 	<main class="min-h-screen p-4">
 		<h1 class="font-['Caveat_Brush'] text-4xl text-white">Gaterapia</h1>
 	</main>
