feat(*): 💄 add Gaterapia's colors

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="Gaterapia">
-	<main class="min-h-screen p-4">
+	<main class="min-h-screen bg-cerise-red-600 px-4 py-2">
 		<h1 class="font-['Caveat_Brush'] text-4xl text-white">Gaterapia</h1>
 	</main>
 </Layout>
