feat(*): ➕ add Gaterapia's secondary font

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "@fontsource/caveat-brush";
+import "@fontsource-variable/montserrat";
 
 import { getCompanyServices } from "@/lib/data";
 
@@ -27,5 +28,5 @@ const { title } = Astro.props;
 
 <style is:global>
 	html, body { min-height: 100vh; }
-	html { font-family: system-ui, sans-serif; }
+	html { font-family: "Montserrat Variable", system-ui, sans-serif; }
 </style>
