--- a/src/components/sections/hero/HeroHello.astro
+++ b/src/components/sections/hero/HeroHello.astro
@@ -3,25 +3,32 @@ import { Avatar } from "@nextui-org/react";
 
 import HeroBentoItem from "./HeroBentoItem.astro";
 
-const { class: className, ...restOfProps } = Astro.props;
+interface Props {
+  class?: string;
+}
+
+const { class: className } = Astro.props;
 ---
 
-<HeroBentoItem
-  class=`${className} p-4 flex flex-col gap-4 text-white bg-gradient-to-b from-white/20 via-white/10 to-transparent`
-  {...restOfProps}
->
-  <h1 class="hidden md:block font-['Caveat_Brush'] text-7xl text-white">
-    Gaterapia
-  </h1>
-  <div class="flex gap-4 items-center">
-    <Avatar showFallback />
-    <h2 class="text-xl font-semibold">Hola! Soy Juli 🙋‍♀️</h2>
+<HeroBentoItem class=`relative ${className}`>
+  <div
+    class="absolute inset-0 opacity-20 bg-gradient-to-r from-gray-200 via-gray-400 to-gray-600"
+  >
   </div>
-  <div class="flex flex-col gap-4 text-lg font-normal text-pretty">
-    <p>
-      Nos especializamos en comportamiento felino, catsitting, terapia floral,
-      reiki, registros akáshicos y comunicación telepática con animales.
-    </p>
-    <p>Espero que te podamos ayudar 🤗</p>
+  <div class="absolute inset-0 p-4 flex flex-col gap-4 text-white">
+    <h1 class="hidden md:block font-['Caveat_Brush'] text-7xl text-white">
+      Gaterapia
+    </h1>
+    <div class="flex gap-4 items-center">
+      <Avatar showFallback />
+      <h2 class="text-xl font-semibold">Hola! Soy Juli 🙋‍♀️</h2>
+    </div>
+    <div class="flex flex-col gap-4 text-base font-medium text-pretty">
+      <p>
+        Nos especializamos en comportamiento felino, catsitting, terapia floral,
+        reiki, registros akáshicos y comunicación telepática con animales.
+      </p>
+      <p>Espero que te podamos ayudar 🤗</p>
+    </div>
   </div>
 </HeroBentoItem>
