--- a/src/components/sections/hero/HeroHello.astro
+++ b/src/components/sections/hero/HeroHello.astro
@@ -21,14 +21,28 @@ const { class: className } = Astro.props;
     </h1>
     <div class="flex gap-4 items-center">
       <Avatar showFallback />
-      <h2 class="text-xl font-semibold">Hola! Soy Juli 🙋‍♀️</h2>
+      <h2 class="text-xl font-semibold flex items-center gap-2">
+        Hola! Soy Juli
+        <img
+          class="size-8"
+          src="/woman_raising_hand-emoji.webp"
+          alt="Emoji de una mujer levantando la mano"
+        />
+      </h2>
     </div>
     <div class="flex flex-col gap-4 text-base font-medium text-pretty">
       <p>
         Nos especializamos en comportamiento felino, catsitting, terapia floral,
         reiki, registros akáshicos y comunicación telepática con animales.
       </p>
-      <p>Espero que te podamos ayudar 🤗</p>
+      <p class="flex items-center gap-1">
+        Espero que te podamos ayudar
+        <img
+          class="size-6"
+          src="/hugging_face-emoji.webp"
+          alt="Emoji de una mujer levantando la mano"
+        />
+      </p>
     </div>
   </div>
 </HeroBentoItem>
