--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,4 @@
 ---
-import { Image } from "astro:assets";
-
 import Navbar from "./Navbar.astro";
 
 import { LinksButton } from "./LinksButton";
@@ -9,12 +7,7 @@ import { LinksButton } from "./LinksButton";
 <header class="w-full sticky top-0 z-50 p-4">
   <div class="max-w-7xl mx-auto flex items-center justify-between">
     <div class="flex gap-2 items-center">
-      <Image
-        src="/gaterapia-logo.webp"
-        alt="Gaterapia's logo"
-        width={50}
-        height={50}
-      />
+      <img class="size-12" src="/gaterapia-logo.webp" alt="Gaterapia's logo" />
     </div>
 
     <!-- Links section for mobile -->
