feat(*): 🚸 add 'theme-color' `meta` tag

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,7 @@ const { title } = Astro.props;
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="theme-color" content="#E1306C" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="description" content={getCompanyServices()} />
