feat(header): ✨ transform logo to a 'home link'

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,16 @@ import { LinksButton } from "./LinksButton";
 <header class="w-full sticky top-0 z-50 p-4">
   <div class="max-w-7xl mx-auto flex items-center justify-between">
     <div class="flex gap-2 items-center">
-      <img class="size-12" src="/gaterapia-logo.webp" alt="Gaterapia's logo" />
+      <a
+        href="/"
+        class="rounded-full transition-all hover:shadow-lg hover:scale-125"
+      >
+        <img
+          class="size-12"
+          src="/gaterapia-logo.webp"
+          alt="Gaterapia's logo"
+        />
+      </a>
     </div>
 
     <!-- Links section for mobile -->
