refactor(header): 🚚 move component to its own folder

--- a/src/components/header/Navbar.astro
+++ b/src/components/header/Navbar.astro
@@ -1,10 +1,10 @@
 ---
 import NavbarLink from "./NavbarLink.astro";
 
-import CoffeeIcon from "./icons/CoffeeIcon.astro";
-import FacebookLogo from "./icons/FacebookLogo.astro";
-import InstagramLogo from "./icons/InstagramLogo.astro";
-import YoutubeLogo from "./icons/YoutubeLogo.astro";
+import CoffeeIcon from "./CoffeeIcon.astro";
+import FacebookLogo from "./FacebookLogo.astro";
+import InstagramLogo from "./InstagramLogo.astro";
+import YoutubeLogo from "./YoutubeLogo.astro";
 ---
 
 <ul class="flex">
