--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 
-import Header from "@/components/Header.astro";
+import Header from "@/components/header/Header.astro";
 import HeroSection from "@/components/sections/hero/HeroSection.astro";
 import MediaSection from "@/components/sections/media/MediaSection.astro";
 import ReviewsSection from "@/components/sections/reviews/ReviewsSection.astro";
