--- a/src/components/sections/hero/HeroHello.astro
+++ b/src/components/sections/hero/HeroHello.astro
@@ -25,6 +25,7 @@ const { class: className } = Astro.props;
         Hola! Soy Juli
         <img
           class="size-8"
+          aria-hidden="true"
           src="/woman_raising_hand-emoji.webp"
           alt="Emoji de una mujer levantando la mano"
         />
@@ -39,8 +40,9 @@ const { class: className } = Astro.props;
         Espero que te podamos ayudar
         <img
           class="size-6"
+          aria-hidden="true"
           src="/hugging_face-emoji.webp"
-          alt="Emoji de una mujer levantando la mano"
+          alt="Emoji de una carita con los brazos abiertos, como si abrazara"
         />
       </p>
     </div>
