--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,15 +28,7 @@ const { title } = Astro.props;
 </html>
 
 <style is:global>
-	html, body { min-height: 100vh; }
+	html, body { min-height: theme(minHeight.screen); }
 	html { font-family: "Montserrat Variable", system-ui, sans-serif; }
-
-	body {
-		min-height: theme(minHeight.screen);
-		background: linear-gradient(
-			to top left,
-			theme(colors.neutral.800),
-			theme(colors.cerise-red.600)
-		);
-	}
+	body { background: linear-gradient(to top left, theme(colors.neutral.800), theme(colors.cerise-red.600)); }
 </style>
