--- a/src/components/sections/hero/hello/Hello.astro
+++ b/src/components/sections/hero/hello/Hello.astro
@@ -1,7 +1,7 @@
 ---
 import { Avatar } from "@nextui-org/react";
 
-import HeroBentoItem from "./HeroBentoItem.astro";
+import HeroBentoItem from "../HeroBentoItem.astro";
 
 interface Props {
   class?: string;
