--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,12 +10,10 @@ import ServicesSection from "@/components/sections/services/ServicesSection.astr
 
 <Layout title="Gaterapia">
 	<Header />
-	<main
-		class="max-w-7xl mx-auto px-4 min-[1350px]:px-0 pb-16 flex flex-col gap-16"
-	>
-		<HeroSection />
-		<ServicesSection />
-		<MediaSection />
-		<ReviewsSection />
+	<main class="w-full px-4 pb-16 flex flex-col gap-16">
+		<HeroSection class="mx-auto max-w-6xl" />
+		<ServicesSection class="mx-auto max-w-6xl" />
+		<MediaSection class="mx-auto max-w-6xl" />
+		<ReviewsSection class="mx-auto max-w-6xl" />
 	</main>
 </Layout>
