--- a/src/components/sections/hero/HeroSection.astro
+++ b/src/components/sections/hero/HeroSection.astro
@@ -2,9 +2,15 @@
 import Hello from "./hello/Hello.astro";
 import HeroBento from "./HeroBento.astro";
 import HeroBentoItem from "./HeroBentoItem.astro";
+
+interface Props {
+  class?: string;
+}
+
+const { class: className, ...restOfProps } = Astro.props;
 ---
 
-<section id="hero" class="md:mt-6">
+<section id="hero" class={`md:mt-6 ${className}`} {...restOfProps}>
   <!-- TODO: reemplazar por logotipo -->
   <h1
     class="block md:hidden font-['Caveat_Brush'] text-5xl sm:text-6xl text-white text-center pb-6"
@@ -13,10 +19,10 @@ import HeroBentoItem from "./HeroBentoItem.astro";
   </h1>
 
   <HeroBento>
-    <Hello class="hidden sm-flex" />
-    <HeroBentoItem>
+    <Hello class="hidden sm:flex md:col-span-4 lg:col-span-5" />
+    <HeroBentoItem class="md:col-span-6 lg:col-span-5">
       <img src="/hero-photo.webp" alt="Foto de Juli, Smoking y Brisa" />
     </HeroBentoItem>
-    <Hello class="flex sm-hidden" />
+    <Hello class="flex sm:hidden" />
   </HeroBento>
 </section>
