--- a/src/components/sections/reviews/ReviewsSection.astro
+++ b/src/components/sections/reviews/ReviewsSection.astro
@@ -1,1 +1,11 @@
-<section id="opiniones"><h3 class="text-2xl text-white">Opiniones</h3></section>
+---
+interface Props {
+  class?: string;
+}
+
+const { class: className, ...restOfProps } = Astro.props;
+---
+
+<section id="opiniones" class={className} {...restOfProps}>
+  <h3 class="text-2xl text-white">Opiniones</h3>
+</section>
