feat(Hero): 📱 work on responsive design (desktop)

--- a/src/components/sections/hero/hello/HelloDescription.astro
+++ b/src/components/sections/hero/hello/HelloDescription.astro
@@ -1,5 +1,5 @@
 <div
-  class="flex flex-col gap-4 text-base min-[400px]:text-lg font-medium text-pretty"
+  class="flex flex-col gap-4 text-base min-[400px]:text-lg lg:text-xl font-medium text-pretty"
 >
   <p>
     Nos especializamos en comportamiento felino, catsitting, terapia floral,
@@ -7,7 +7,7 @@
   </p>
   <p>
     Espero que te podamos ayudar
-    <span class="inline-block align-middle">
+    <span class="inline-block align-bottom">
       <img
         class="size-6"
         src="/hugging_face-emoji.webp"
