--- a/src/components/sections/hero/hello/HelloTitle.astro
+++ b/src/components/sections/hero/hello/HelloTitle.astro
@@ -3,14 +3,14 @@ import { Avatar } from "@nextui-org/react";
 ---
 
 <div class="flex items-center gap-2 min-[400px]:gap-4">
-  <Avatar showFallback />
-  <h2 class="text-base font-semibold min-[400px]:text-xl">
+  <Avatar showFallback className="lg:w-14 lg:h-14" />
+  <h2 class="text-base font-semibold min-[400px]:text-xl lg:text-2xl">
     Hola! Soy Juli
-    <span class="inline-block align-middle">
+    <span class="inline-block align-bottom">
       <img
-        class="size-7 min-[400px]:size-8"
         src="/woman_raising_hand-emoji.webp"
         alt="Emoji de una mujer levantando la mano"
+        class="size-7 min-[400px]:size-8 lg:size-9"
       />
     </span>
   </h2>
