feat(Hello): 🍱 add Gaterapia avatar

--- a/src/components/sections/hero/hello/HelloTitle.astro
+++ b/src/components/sections/hero/hello/HelloTitle.astro
@@ -1,10 +1,10 @@
----
-import { Avatar } from "@nextui-org/react";
----
-
 <div class="flex items-center gap-2 min-[400px]:gap-4">
-  <Avatar showFallback className="lg:w-14 lg:h-14" />
-  <h2 class="text-base font-semibold min-[400px]:text-xl lg:text-2xl">
+  <img
+    alt="Avatar de Juli"
+    src="/hero-avatar-photo.webp"
+    class="rounded-full size-12 lg:size-16 hover:scale-125 transition-all"
+  />
+  <h2 class="text-base font-bold min-[400px]:text-xl lg:text-2xl">
     Hola! Soy Juli
     <span class="inline-block align-bottom">
       <img
