refactor: 🚚 change isotype file name

--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -14,8 +14,8 @@ import LinksButton from "./LinksButton.astro";
         <img
           class="size-12"
           aria-hidden="true"
-          alt="Logo de Gaterapia"
-          src="/gaterapia-logo.webp"
+          alt="Isotipo de Gaterapia"
+          src="/gaterapia-isotype.webp"
         />
       </a>
     </div>
