--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="description" content={getCompanyServices()} />
-		<link rel="icon" type="image/webp" href="/gaterapia-logo.webp" />
+		<link rel="icon" type="image/webp" href="/gaterapia-isotype.webp" />
 		<title>{title}</title>
 	</head>
 	<body>
