feat(Hello): 💬 add site description

--- a/src/components/sections/hero/hello/HelloDescription.astro
+++ b/src/components/sections/hero/hello/HelloDescription.astro
@@ -2,11 +2,14 @@
   class="flex flex-col gap-4 text-base min-[400px]:text-lg lg:text-xl font-medium text-pretty"
 >
   <p>
-    Nos especializamos en comportamiento felino, catsitting, terapia floral,
-    reiki, registros akáshicos y comunicación telepática con animales.
+    <strong>Terapeuta floral</strong> (personas y animales) |
+    <strong>Catsitter</strong> |
+    <strong>Reikista</strong> (nivel 3) |
+    <strong>Registros Akáshicos</strong> (personas y animales) |
+    <strong>Comunicación telepática</strong> con animales
   </p>
   <p>
-    Espero que te podamos ayudar
+    Espero poder ayudarte
     <span class="inline-block align-bottom">
       <img
         class="size-6"
