feat(Hero): ✨ use Gaterapia logo as heading

--- a/src/components/sections/hero/Hero.astro
+++ b/src/components/sections/hero/Hero.astro
@@ -4,11 +4,11 @@ import HeroBento from "./HeroBento.astro";
 import HeroBentoItem from "./HeroBentoItem.astro";
 ---
 
-<h1
-  class="block md:hidden font-['Caveat_Brush'] text-5xl sm:text-6xl text-white text-center pb-6"
->
-  Gaterapia
-</h1>
+<img
+  src="/gaterapia-logo.png"
+  alt="Logotipo de Gaterapia"
+  class="block md:hidden w-60 mx-auto mt-6 pb-6"
+/>
 <HeroBento>
   <Hello class="hidden sm:flex md:col-span-4 lg:col-span-5" />
   <HeroBentoItem class="md:col-span-6 lg:col-span-5">
