feat(Header): ✨ add e-mail channel to navbar

--- a/src/components/header/Navbar.astro
+++ b/src/components/header/Navbar.astro
@@ -2,12 +2,16 @@
 import NavbarLink from "./NavbarLink.astro";
 
 import CoffeeIcon from "./CoffeeIcon.astro";
+import EmailIcon from "./EmailIcon.astro";
 import FacebookLogo from "./FacebookLogo.astro";
 import InstagramLogo from "./InstagramLogo.astro";
 import YoutubeLogo from "./YoutubeLogo.astro";
 ---
 
 <ul class="flex">
+  <NavbarLink title="E-mail" href="mailto:gaterapia.catsitters@gmail.com">
+    <EmailIcon class="size-5" />
+  </NavbarLink>
   <NavbarLink title="Instagram" href="https://www.instagram.com/gaterapiaok">
     <InstagramLogo class="size-5" />
   </NavbarLink>
