--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Services from "@/components/sections/services/Services.astro";
 <Layout title="Gaterapia">
 	<Header />
 	<main class="w-full px-4 pb-16 flex flex-col gap-16">
-		<Section id="hero" class="md:mt-6">
+		<Section id="hero" class="md:mt-6 lg:mt-20">
 			<Hero />
 		</Section>
 		<Section id="servicios">
