--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Services from "@/components/sections/services/Services.astro";
 
 <Layout title="Gaterapia">
 	<Header />
-	<main class="w-full px-4 pb-16 flex flex-col gap-16">
+	<main class="w-full px-4 pb-16 flex flex-col gap-28 sm:gap-40">
 		<Section id="hero" class="md:mt-6 lg:mt-20">
 			<Hero />
 		</Section>
