--- a/src/components/header/Navbar.astro
+++ b/src/components/header/Navbar.astro
@@ -9,19 +9,19 @@ import YoutubeLogo from "./YoutubeLogo.astro";
 ---
 
 <ul class="flex">
-  <NavbarLink title="E-mail" href="mailto:gaterapia.catsitters@gmail.com">
+  <NavbarLink label="E-mail" href="mailto:gaterapia.catsitters@gmail.com">
     <EmailIcon class="size-5" />
   </NavbarLink>
-  <NavbarLink title="Instagram" href="https://www.instagram.com/gaterapiaok">
+  <NavbarLink label="Instagram" href="https://www.instagram.com/gaterapiaok">
     <InstagramLogo class="size-5" />
   </NavbarLink>
-  <NavbarLink title="Facebook" href="https://www.facebook.com/gaterapiaok">
+  <NavbarLink label="Facebook" href="https://www.facebook.com/gaterapiaok">
     <FacebookLogo class="size-5" />
   </NavbarLink>
-  <NavbarLink title="Youtube" href="https://www.youtube.com/@gaterapia1074">
+  <NavbarLink label="Youtube" href="https://www.youtube.com/@gaterapia1074">
     <YoutubeLogo class="size-5" />
   </NavbarLink>
-  <NavbarLink title="Cafecito" href="/">
+  <NavbarLink label="Cafecito" href="/">
     <CoffeeIcon class="size-5" />
   </NavbarLink>
 </ul>
