chore(hero): 🚚 move hero images to its own folder

--- a/src/components/sections/hero/Hero.astro
+++ b/src/components/sections/hero/Hero.astro
@@ -14,7 +14,7 @@ import HeroBentoItem from "./HeroBentoItem.astro";
   <HeroBentoItem class="md:col-span-6 lg:col-span-5 grid place-items-center">
     <img
       class="h-full"
-      src="/hero-photo.webp"
+      src="/hero/hero-photo.webp"
       alt="Foto de Juli, Smoking y Brisa"
     />
   </HeroBentoItem>
