--- a/src/components/sections/hero/hello/HelloDescription.astro
+++ b/src/components/sections/hero/hello/HelloDescription.astro
@@ -13,7 +13,7 @@
     <span class="inline-block align-bottom">
       <img
         class="size-6"
-        src="/hugging_face-emoji.webp"
+        src="/hero/hugging_face-emoji.webp"
         alt="Emoji de una carita con los brazos abiertos, como si abrazara"
       />
     </span>
