--- a/src/components/sections/hero/hello/HelloTitle.astro
+++ b/src/components/sections/hero/hello/HelloTitle.astro
@@ -1,14 +1,14 @@
 <div class="flex items-center gap-2 min-[400px]:gap-4">
   <img
     alt="Avatar de Juli"
-    src="/hero-avatar-photo.webp"
+    src="/hero/hero-avatar-photo.webp"
     class="rounded-full size-12 lg:size-16 hover:scale-125 transition-all"
   />
   <h2 class="text-base font-bold min-[400px]:text-xl lg:text-2xl">
     Hola! Soy Juli
     <span class="inline-block align-bottom">
       <img
-        src="/woman_raising_hand-emoji.webp"
+        src="/hero/woman_raising_hand-emoji.webp"
         alt="Emoji de una mujer levantando la mano"
         class="size-7 min-[400px]:size-8 lg:size-9"
       />
