--- a/src/components/sections/services/Services.astro
+++ b/src/components/sections/services/Services.astro
@@ -1,1 +1,15 @@
-<h3 class="text-2xl text-white">Servicios</h3>
+---
+import { SERVICES } from "./services";
+
+import ServicesBento from "./ServicesBento.astro";
+import ServicesBentoItem from "./ServicesBentoItem.astro";
+---
+
+<h3
+  class="font-['Caveat_Brush'] text-white text-5xl lg:text-6xl text-center mb-8 lg:mb-10"
+>
+  Servicios
+</h3>
+<ServicesBento>
+  {SERVICES.map((service) => <ServicesBentoItem {...service} />)}
+</ServicesBento>
