--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 import "@fontsource/caveat-brush";
 import "@fontsource-variable/montserrat";
 
+import Header from "@/components/header/Header.astro";
+
 import { getCompanyServices } from "@/lib/data";
 
 interface Props {
@@ -23,6 +25,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<Header />
 		<slot />
 	</body>
 </html>
