--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -1,7 +1,7 @@
 ---
 import Navbar from "./Navbar.astro";
 
-import LinksButton from "./LinksButton.astro";
+import { LinksButton } from "./LinksButton";
 ---
 
 <header class="w-full sticky top-0 z-50 p-4">
@@ -22,24 +22,9 @@ import LinksButton from "./LinksButton.astro";
       </a>
     </div>
 
-    <!-- Links section for mobile -->
-    <LinksButton class="flex sm:hidden" />
-
-    <!-- Navbar for desktop -->
-    <div class="hidden sm:flex text-white">
+    <div class="flex items-center gap-3 text-white">
       <Navbar />
-      <div
-        id="navbar-backdrop"
-        class={`
-          absolute left-0 top-0
-          ease-in-out opacity-0 -z-10
-          transition-all duration-500
-          w-[var(--width)] h-[var(--height)]
-          bg-black/10 backdrop-blur-lg rounded-lg
-          translate-x-[var(--left)] translate-y-[var(--top)]
-        `}
-      >
-      </div>
+      <LinksButton className="hidden min-[350px]:flex" client:visible />
     </div>
   </div>
 </header>
