--- a/src/components/header/NavbarLink.astro
+++ b/src/components/header/NavbarLink.astro
@@ -7,11 +7,11 @@ interface Props {
 const { href, label } = Astro.props;
 ---
 
-<li>
+<li class="grid place-items-center">
   <a
     href={href}
     aria-labelledby={label}
-    class="transition-colors duration-500 inline-block px-2 py-2 align-middle"
+    class="transition-colors duration-500 inline-block px-3 py-3 align-middle"
   >
     <span id={label} class="hidden">{label}</span>
     <slot />
