--- a/src/components/header/Navbar.astro
+++ b/src/components/header/Navbar.astro
@@ -33,3 +33,15 @@ const SOCIAL_LINKS = [
     ))
   }
 </ul>
+<div
+  id="navbar-backdrop"
+  class={`
+    absolute left-0 top-0
+    ease-in-out opacity-0 -z-10
+    transition-all duration-500
+    w-[var(--width)] h-[var(--height)]
+    bg-black/10 backdrop-blur-lg rounded-lg
+    translate-x-[var(--left)] translate-y-[var(--top)]
+  `}
+>
+</div>
