fix(images): 🩹 add `pointer-events: none`

--- a/src/components/sections/hero/hello/Hello.astro
+++ b/src/components/sections/hero/hello/Hello.astro
@@ -31,7 +31,7 @@ const { class: className } = Astro.props;
     <img
       src="/gaterapia-logo.png"
       alt="Logotipo de Gaterapia"
-      class="hidden md:block w-80 self-center mt-6 lg:mt-2"
+      class="hidden md:block w-80 self-center mt-6 lg:mt-2 pointer-events-none select-none"
     />
     <HelloTitle />
     <HelloDescription />
