--- a/src/components/sections/hero/hello/HelloDescription.astro
+++ b/src/components/sections/hero/hello/HelloDescription.astro
@@ -12,8 +12,8 @@
     Espero poder ayudarte
     <span class="inline-block align-bottom">
       <img
-        class="size-6"
         src="/hero/hugging_face-emoji.webp"
+        class="size-6 pointer-events-none select-none"
         alt="Emoji de una carita con los brazos abiertos, como si abrazara"
       />
     </span>
