--- a/src/components/sections/hero/hello/HelloTitle.astro
+++ b/src/components/sections/hero/hello/HelloTitle.astro
@@ -2,7 +2,7 @@
   <img
     alt="Avatar de Juli"
     src="/hero/hero-avatar-photo.webp"
-    class="rounded-full size-12 lg:size-16 hover:scale-125 transition-all"
+    class="rounded-full size-12 lg:size-16 hover:scale-125 transition-all pointer-events-none select-none"
   />
   <h2 class="text-base font-bold min-[400px]:text-xl lg:text-2xl">
     Hola! Soy Juli
@@ -10,7 +10,7 @@
       <img
         src="/hero/woman_raising_hand-emoji.webp"
         alt="Emoji de una mujer levantando la mano"
-        class="size-7 min-[400px]:size-8 lg:size-9"
+        class="size-7 min-[400px]:size-8 lg:size-9 pointer-events-none select-none"
       />
     </span>
   </h2>
