--- a/src/components/sections/services/ServicesBentoItem.astro
+++ b/src/components/sections/services/ServicesBentoItem.astro
@@ -28,6 +28,7 @@ const { class: className, img, title, url, subtitle } = Astro.props;
     class={`
       w-full h-full object-cover
       absolute inset-0 opacity-60
+      pointer-events-none select-none
       transition-all group-hover:scale-110
     `}
   />
