--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -14,10 +14,9 @@ import { LinksButton } from "./LinksButton";
       >
         <span id="logo-link-label" class="hidden">Volver al inicio</span>
         <img
-          class="size-12"
-          aria-hidden="true"
           alt="Isotipo de Gaterapia"
           src="/gaterapia-isotype.webp"
+          class="size-12 pointer-events-none select-none"
         />
       </a>
     </div>
