--- a/src/components/sections/hero/Hero.astro
+++ b/src/components/sections/hero/Hero.astro
@@ -7,7 +7,7 @@ import HeroBentoItem from "./HeroBentoItem.astro";
 <img
   src="/gaterapia-logo.png"
   alt="Logotipo de Gaterapia"
-  class="block md:hidden w-60 mx-auto mt-6 pb-6"
+  class="block md:hidden w-60 mx-auto mt-6 pb-6 pointer-events-none select-none"
 />
 <HeroBento>
   <Hello class="hidden sm:flex md:col-span-4 lg:col-span-5" />
