--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "@fontsource/caveat-brush";
 import "@fontsource-variable/montserrat";
 
 import Header from "@/components/header/Header.astro";
+import Footer from "@/components/footer/Footer.astro";
 
 import { getCompanyServices } from "@/lib/data";
 
@@ -27,6 +28,7 @@ const { title } = Astro.props;
 	<body>
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
