--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -3,11 +3,16 @@
     class={`
     mx-auto w-full max-w-6xl p-8 rounded-2xl
     bg-black/10 text-white font-medium text-lg
-    flex flex-col items-center justify-center md:flex-row md:justify-between
+    flex gap-4 flex-col items-center justify-center md:flex-row md:justify-between
   `}
   >
-    <small>© 2024 Gaterapia. Todos los derechos reservados.</small>
-    <small>
+    <div class="flex flex-col md:flex-row">
+      <small class="text-center text-balance">© 2024 Gaterapia.&nbsp;</small>
+      <small class="text-center text-balance -mt-2 md:mt-0">
+        Todos los derechos reservados.
+      </small>
+    </div>
+    <small class="text-center text-balance">
       Made with ❤️ by
       <a
         target="_blank"
