feat(Hello): 💬 update presentation

--- a/src/components/sections/hero/hello/HelloDescription.astro
+++ b/src/components/sections/hero/hello/HelloDescription.astro
@@ -2,11 +2,11 @@
   class="flex flex-col gap-4 text-base min-[400px]:text-lg lg:text-xl font-medium text-pretty"
 >
   <p>
-    <strong>Terapia floral</strong> (personas y animales) |
-    <strong>Catsitting</strong> |
-    <strong>Reiki</strong> (nivel 3) |
-    <strong>Registros Akáshicos</strong> (personas y animales) |
-    <strong>Comunicación telepática</strong> con animales
+    Soy <strong>terapeuta floral</strong>
+    (de personas y animales), y me especializo en <strong>felinos</strong>. Hago
+    <strong>catsitting</strong>, <strong>reiki</strong>,
+    <strong>comunicación telepática</strong> con animales y
+    <strong>registros akáshicos</strong> (de personas y animales).
   </p>
   <p>
     Espero poder ayudarte
