--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -1,4 +1,17 @@
-<footer class="w-full px-4 pb-4 pt-24">
+---
+interface Props {
+  class?: string;
+}
+
+const { class: className } = Astro.props;
+---
+
+<footer
+  class={`
+    ${className ?? ""}
+    w-full px-4 pb-4
+  `}
+>
   <div
     class={`
       mx-auto w-full max-w-6xl p-8 rounded-2xl
