--- a/src/components/sections/hero/Hero.astro
+++ b/src/components/sections/hero/Hero.astro
@@ -10,8 +10,8 @@ import HeroBentoItem from "./HeroBentoItem.astro";
   class="block md:hidden w-60 mx-auto mt-6 pb-6 pointer-events-none select-none"
 />
 <HeroBento>
-  <Hello class="hidden sm:flex md:col-span-4 lg:col-span-5" />
-  <HeroBentoItem class="md:col-span-6 lg:col-span-5 grid place-items-center">
+  <Hello class="hidden sm:flex" />
+  <HeroBentoItem class="grid place-items-center">
     <img
       class="h-full"
       src="/hero/hero-photo.webp"
