--- a/src/layouts/LinksLayout.astro
+++ b/src/layouts/LinksLayout.astro
@@ -2,8 +2,8 @@
 import "@fontsource/caveat-brush";
 import "@fontsource-variable/montserrat";
 
-import Header from "@/components/header/Header.astro";
 import Footer from "@/components/footer/Footer.astro";
+import LinksHeader from "@/components/links/LinksHeader.astro";
 
 import { getCompanyServices } from "@/lib/data";
 
@@ -26,9 +26,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<Header />
+		<LinksHeader />
 		<slot />
-		<Footer class="pt-24" />
+		<Footer class="pt-4" />
 	</body>
 </html>
 
