--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -1,24 +1,46 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import LinksLayout from "@/layouts/LinksLayout.astro";
+
+import SocialNetworks from "@/components/links/SocialNetworks.astro";
 
 import { api } from "@/lib/api";
 
 const links = await api.links.getAll();
 ---
 
-<Layout title="Links de Gaterapia">
-  <header class="pt-14 font-bold text-white">
-    Foto
-    <br />
-    Nombre
-    <br />
-    Descripción
-    <br />
-    Links útiles
-  </header>
-  <main class="pt-14 font-bold text-white">
-    Links extraídos del Google Sheet
-    {JSON.stringify(links, null, 2)}
+<LinksLayout title="Links de Gaterapia">
+  <main class="w-full px-9 min-[750px]:px-4 pb-16 flex flex-col gap-16">
+    <section
+      class={`
+        w-full max-w-[635px] mx-auto pt-8
+        flex flex-col gap-3 justify-center items-center
+      `}
+    >
+      <img
+        class="w-[14.5rem]"
+        src="/gaterapia-logo.png"
+        alt="Logotipo de Gaterapia"
+      />
+      <SocialNetworks />
+    </section>
+    <section class="w-full max-w-[635px] mx-auto flex flex-col gap-4">
+      {
+        links.map((link) => (
+          <a
+            href={link.url}
+            target="_blank"
+            rel="noopener noreferrer"
+            class={`
+              rounded-full p-4
+              text-center text-white font-bold
+              border-2 border-white bg-white/20
+              transition-all hover:bg-transparent hover:scale-105
+            `}
+          >
+            {link.link}
+          </a>
+        ))
+      }
+    </section>
   </main>
-  <footer class="pt-14 font-bold text-white">Redes sociales</footer>
-</Layout>
+</LinksLayout>
