--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -31,10 +31,10 @@ const links = await api.links.getAll();
             target="_blank"
             rel="noopener noreferrer"
             class={`
-              rounded-full p-4
+              rounded-2xl p-4
               text-center text-white font-bold
               border-2 border-white bg-white/20
-              transition-all hover:bg-transparent hover:scale-105
+              transition-all hover:bg-white/10 hover:shadow-lg hover:shadow-neutral-300
             `}
           >
             {link.link}
