--- a/src/components/links/SocialNetworks.astro
+++ b/src/components/links/SocialNetworks.astro
@@ -34,7 +34,7 @@ const SOCIAL_NETWORKS = [
   {
     SOCIAL_NETWORKS.map(({ label, href, Icon }) => (
       <SocialNetworkLink label={label} href={href}>
-        <Icon class="size-8" />
+        <Icon class="size-8 transition-all group-hover:drop-shadow-[0px_0px_3px_#FFFFFF]" />
       </SocialNetworkLink>
     ))
   }
