refactor(icons): 🚚 move common icons to `src/icons/` folder

--- a/src/components/header/Navbar.astro
+++ b/src/components/header/Navbar.astro
@@ -1,9 +1,9 @@
 ---
 import NavbarLink from "./NavbarLink.astro";
 
-import EmailIcon from "../icons/EmailIcon.astro";
-import FacebookLogo from "../icons/FacebookLogo.astro";
-import InstagramLogo from "../icons/InstagramLogo.astro";
+import EmailIcon from "@/icons/EmailIcon.astro";
+import FacebookLogo from "@/icons/FacebookLogo.astro";
+import InstagramLogo from "@/icons/InstagramLogo.astro";
 
 const SOCIAL_LINKS = [
   {
