--- a/src/components/links/SocialNetworks.astro
+++ b/src/components/links/SocialNetworks.astro
@@ -1,10 +1,10 @@
 ---
 import SocialNetworkLink from "./SocialNetworkLink.astro";
 
-import EmailIcon from "../icons/EmailIcon.astro";
-import FacebookLogo from "../icons/FacebookLogo.astro";
-import InstagramLogo from "../icons/InstagramLogo.astro";
-import YoutubeLogo from "../icons/YoutubeLogo.astro";
+import EmailIcon from "@/icons/EmailIcon.astro";
+import FacebookLogo from "@/icons/FacebookLogo.astro";
+import InstagramLogo from "@/icons/InstagramLogo.astro";
+import YoutubeLogo from "@/icons/YoutubeLogo.astro";
 
 const SOCIAL_NETWORKS = [
   {
